<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".medical.medicalRecord.record.PostMedicalRecordActivity"
    android:background="#FFFFFF"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--低危-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="低危"
                    android:textSize="20sp"
                    android:layout_marginBottom="2dp"
                    />

                <CheckBox
                    android:id="@+id/sideEffect_lowSick1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_lowSick1"/>
                <CheckBox
                    android:id="@+id/sideEffect_lowSick2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_lowSick2"/>
                <CheckBox
                    android:id="@+id/sideEffect_lowSick3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_lowSick3"/>
                <CheckBox
                    android:id="@+id/sideEffect_lowSick4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_lowSick4"/>
                <CheckBox
                    android:id="@+id/sideEffect_lowSick5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_lowSick5"/>
                <CheckBox
                    android:id="@+id/sideEffect_lowSick6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_lowSick6"/>
                <CheckBox
                    android:id="@+id/sideEffect_lowSick7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_lowSick7"/>
                <CheckBox
                    android:id="@+id/sideEffect_lowSick8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_lowSick8"/>
            </LinearLayout>

            <!--中危-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="中危"
                    android:textSize="20sp"
                    android:layout_marginBottom="2dp"
                    />
                <CheckBox
                    android:id="@+id/sideEffect_intermediateRisk1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_intermediateRisk1"/>
                <CheckBox
                    android:id="@+id/sideEffect_intermediateRisk2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_intermediateRisk2"/>
                <CheckBox
                    android:id="@+id/sideEffect_intermediateRisk3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_intermediateRisk3"/>
                <CheckBox
                    android:id="@+id/sideEffect_intermediateRisk4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_intermediateRisk4"/>
                <CheckBox
                    android:id="@+id/sideEffect_intermediateRisk5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_intermediateRisk5"/>
                <CheckBox
                    android:id="@+id/sideEffect_intermediateRisk6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_intermediateRisk6"/>
                <CheckBox
                    android:id="@+id/sideEffect_intermediateRisk7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_intermediateRisk7"/>
                <CheckBox
                    android:id="@+id/sideEffect_intermediateRisk8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_intermediateRisk8"/>
            </LinearLayout>

            <!--高危-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="高危"
                    android:textSize="60px"
                    android:layout_marginBottom="2dp"
                    />
                <CheckBox
                    android:id="@+id/sideEffect_highRisk1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_highRisk1"/>
                <CheckBox
                    android:id="@+id/sideEffect_highRisk2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_highRisk2"/>
                <CheckBox
                    android:id="@+id/sideEffect_highRisk3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_highRisk3"/>
                <CheckBox
                    android:id="@+id/sideEffect_highRisk4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sideEffects_text"
                    android:text="@string/sideEffect_highRisk4"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_sideEffects_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="确定"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>