<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".medical.medicalRecord.record.PostMedicalRecordActivity"
    android:background="#FFFFFF"
    >

    <!--低危-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="低危"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <CheckBox
                        android:id="@+id/dtc_lowSick1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dtc_text"
                        android:text="@string/dtc_lowSick1"/>
                    <CheckBox
                        android:id="@+id/dtc_lowSick2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dtc_text"
                        android:text="@string/dtc_lowSick2"/>
                    <CheckBox
                        android:id="@+id/dtc_lowSick3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dtc_text"
                        android:text="@string/dtc_lowSick3"/>
                    <CheckBox
                        android:id="@+id/dtc_lowSick4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dtc_text"
                        android:text="@string/dtc_lowSick4"/>
                    <CheckBox
                        android:id="@+id/dtc_lowSick5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dtc_text"
                        android:layout_marginTop="5dp"
                        android:text="@string/dtc_lowSick5"/>
                </LinearLayout>

            </LinearLayout>

            <!--中危-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="中危"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    />
                <CheckBox
                    android:id="@+id/dtc_intermediateRisk1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dtc_text"
                    android:text="@string/dtc_intermediateRisk1" />
                <CheckBox
                    android:id="@+id/dtc_intermediateRisk2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dtc_text"
                    android:text="@string/dtc_intermediateRisk2"
                    android:layout_marginTop="8dp"/>

                <CheckBox
                    android:id="@+id/dtc_intermediateRisk3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/dtc_intermediateRisk3"
                    android:textSize="@dimen/dtc_text" />
            </LinearLayout>

            <!--高危-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="高危"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    />
                <CheckBox
                    android:id="@+id/dtc_highRisk1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dtc_text"
                    android:text="@string/dtc_highRisk1"/>
                <CheckBox
                    android:id="@+id/dtc_highRisk2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dtc_text"
                    android:text="@string/dtc_highRisk2"/>
                <CheckBox
                    android:id="@+id/dtc_highRisk3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dtc_text"
                    android:text="@string/dtc_highRisk3"/>
                <CheckBox
                    android:id="@+id/dtc_highRisk4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dtc_text"
                    android:text="@string/dtc_highRisk4"/>
                <CheckBox
                    android:id="@+id/dtc_highRisk5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dtc_text"
                    android:text="@string/dtc_highRisk5"/>
                <CheckBox
                    android:id="@+id/dtc_highRisk6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dtc_text"
                    android:text="@string/dtc_highRisk6"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_dtc_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="确 定"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>