<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".medical.medicalRecord.calculateDosage.DosageReviewActivity"
    android:background="#FFFFFF"
    >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            >

            <LinearLayout
                android:background="#ffffff"
                android:id="@+id/gj_recruit"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dip"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="7dip">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/drug"/>
                <TextView
                    android:textSize="23sp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用药调整方案"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="现服用 优甲乐/雷替斯/加衡/甲状腺素 等药物的基础上，建议调整方案："
                android:textSize="@dimen/dosage_review"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dosage_review"
                    android:textColor="@color/colorPrimary"
                    android:text="甲状腺素调整量（微克）："
                    />
                <TextView
                    android:id="@+id/tv_adapt_dosage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dosage_review"
                    android:textColor="@color/colorPrimary"
                    android:text="隔天减少12.5ug"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="@dimen/pre_medical"
                    android:textColor="@color/colorPrimary"
                    android:text="注：该剂量根据『甲状腺素』精确算出，其他药物的剂量请根据药物规格判断"
                    />
            </LinearLayout>

            <LinearLayout
                android:background="#ffffff"
                android:id="@+id/gjj_recruit"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dip"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10dip">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/review"/>
                <TextView
                    android:textSize="23sp"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="复查方案"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="建议下一次复查时间为："
                android:textSize="@dimen/dosage_review"
                />
            <TextView
                android:id="@+id/tv_review_time_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/dosage_review"
                android:textColor="@color/colorPrimary"
                android:text="建议术后每六个月复查一次"
                />

            <Button
                android:id="@+id/btn_dosage_sure"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:background="@drawable/shape"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/re_dosage_review"
                android:text="确 定"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dip"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matter_attention"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matter_attention1"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matter_attention2"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matter_attention3"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matter_attention4"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matter_attention5"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matter_attention6"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matter_attention7"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matter_attention8"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>